css/subsection.css
/* 
    Filename: subsection.css
    Purpose: holds style rules for the subsection pages of the design system website.
    Author: Montana Pistell
    Last Modified: March 27, 2023
*/

/* ----- All Subsections ------ */
.breadcrumbs {
  padding: 15px 25px;
  color: var(--charcoal);
  width: 100%;
  background-color: white;
  box-shadow: 0px 6px 20px -10px rgba(0,0,0,0.2);
  position: fixed;
}
.breadcrumbs li {
  display: inline;
}
.breadcrumbs a {
  color: var(--deep-green);
}
.title {
  margin-top: 75px;
}
.title,
.description {
  margin-left: 25px;
  margin-bottom: 25px;
  width: 80%;
}
.section {
  margin-left: 25px;
  width: 80%;
  color: var(--charcoal);
}
.cols{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 25px;
}
.cols > div {
  width: 45%;
}
@media only screen and (max-width: 768px) {
  .cols {
    width: 100%;
    flex-direction: column;
  }
  .cols > div {
    width: 80%;
  }
}
.quick-summary {
  margin: 0 0 25px 25px;
  padding: 10px;
  border: 5px dotted var(--ash-grey);
}
.quick-summary a {
  font-weight: 600;
  font-size: 1rem;
  color: var(--deep-green);
  text-decoration: underline;
  transition: all 0.3s ease-in-out;
}
.quick-summary.section h2 {
  margin-bottom: 10px;
}
.quick-summary.section p {
  margin-bottom: 0;
}
.section-title, .section-description, .section h3, .section p {
  margin-bottom: 25px;
}
.example-block {
  width: auto;
  margin: 25px 0;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}
.example-block.positive {
  background-color: white;
}
.example-block.negative {
  background-color: var(--charcoal);
}


/* ----- Styles: Colours ----- */
.color-cards {
  margin-top: 25px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
.color-card {
  width: 210px;
  margin: 0 20px 20px 0;
}
.color-info {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 10px;
}
.color-info strong {
  min-width: 120px;
}
.mini-swatch {
  height: 20px;
  width: 20px;
  border: 1px solid var(--charcoal);
  margin-right: 5px;
}
.color-swatch {
  height: 100px;
  width: 100%;
  display: flex;
  align-items: end;
}
.charcoal {
  background-color: var(--charcoal);
}
.charcoal .color-name, .deep-green .color-name {
  color: white;
}
.deep-green {
  background-color: var(--deep-green);
}
.leaf-green {
  background-color: var(--leaf-green);
}
.light-blue {
  background-color: var(--light-blue);
}
.cream {
  background-color: var(--cream);
}
.ash-grey {
  background-color: var(--ash-grey);
}
p.color-name {
  font-size: 1.2rem;
  font-weight: 600;
  padding: 5px;
  width: 100%;
  margin: 0;
}
p.color-codes {
  padding: 5px;
}

/* ----- Styles: Images ----- */
div.images-group {
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  margin: 25px 0;
}
.example-block.image {
  width: fit-content;
  height: fit-content;
  margin: 10px;
}
/* General Images */
.general-img img {
  width: inherit;
  height: inherit;
  object-fit: cover;
  object-position: center;
  border-radius: 5px;
}
.general-img.square {
  width: 200px;
  height: 200px;
}
.general-img.portrait {
  width: 200px;
  height: 400px;
}
.general-img.landscape {
  width: 400px;
  height: 200px;
}

/* Card Images */
div.cards-group {
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  margin: 25px 0;
}
.cards-group .example-block {
  height: fit-content;
  margin: 10px;
}

/* Hero Images */
.sample-hero {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
    url("../images/houseplants-row-light.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-items: center;
  text-align: left;
  padding: 25px;
}
.sample-hero h1 {
  width: 100%;
  color: var(--cream);
  margin: 25px 0;
  padding-left: 0;
}
.sample-hero p {
  width: 80%;
  color: var(--cream);
  font-size: 1.2rem;
  margin: 25px 0;
}
.sample-hero a {
  margin: 25px 0;
}

/* ----- Styles: Spacing ----- */
.example-block.spacing {
  padding: 0 0 25px 25px;
  width: fit-content;
}
/* Text Spacing */
.example-block.spacing h3 {
  padding-top: 25px;;
}

/* Image Spacing */
.images-grid {
  display: flex;
  flex-wrap: wrap;
}
.image.image-spacing {
  margin: 25px 25px 0 0;
}
/* Button Spacing */
.example-block.spacing a {
  display: block;
  margin: 25px 0 0;
}

/* ----- Styles: Typography ----- */
.typography-sets {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 80%;
}
.typography-sets .example-block {
  width: 45%;
  padding-bottom: 25px;
}
@media only screen and (max-width: 768px) {
  .typography-sets .example-block {
    width: 100%;
  }
}
/* Typography Colour Styles */
.positive * {
  color: var(--charcoal);
}
.positive a {
  color: var(--deep-green);
  text-decoration: underline;
}
.negative * {
  color: var(--cream);
}
.negative a {
  color: var(--light-blue);
  text-decoration: underline;
}
.negative a:hover {
  color: var(--cream);
}
/* Typography Font Styles */
.typography-sets h1 {
  font-weight: 900;
  font-size: 2.4rem;
  margin: 25px 25px;
}
.typography-sets h2 {
  font-weight: 500;
  font-size: 1.8rem;
  margin: 20px 25px;
}
.typography-sets h3 {
  font-weight: 900;
  font-size: 1.4rem;
  margin: 15px 25px;
}
.typography-sets h4 {
  font-weight: 500;
  font-size: 1.1rem;
  margin: 10px 25px;
}
.typography-sets h5 {
  font-weight: 900;
  font-size: 0.9rem;
  margin: 5px 25px;
}
.typography-sets h6 {
  font-weight: 500;
  font-size: 0.7rem;
  margin: 5px 25px;
}
.typography-sets p {
  font-weight: 500;
  font-size: 1rem;
  margin: 0 25px;
}
.typography-sets p a {
  font-weight: 600;
  font-size: 1rem;
  transition: all 0.3s ease-in-out;
}
.typography-sets p a:hover {
  text-decoration: underline;
}

/* ----- Navigation: Breadcrumbs ----- */
.breadcrumbs.positive {
  position: relative;
  background-color: var(--cream);
}
.breadcrumbs.positive li {
  color: var(--charcoal);
}
.breadcrumbs.positive a {
  color: var(--deep-green);
}
/* ... */

